--- a/key.properties
+++ b/key.properties
@@ -1,4 +1,4 @@
-storePassword=<qwerty>
-keyPassword=<qwerty>
+storePassword=qwerty
+keyPassword=qwerty
 keyAlias=key
-storeFile=<android/key.jks>
+storeFile=key.jks
